# music-chain

./: Cargo.toml  Dockerfile  Jenkinsfile  Jenkinsfile   README.md  docker-compose.yml
circom/: input.json  multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  task.circom  verification_key.json
circom/multiplier2_cpp/: multiplier2
contents/: Jenkinsfile
frame/ZKP/: Cargo.toml
frame/ZKP/src/: common.rs  deserialization.rs  lib.rs  verifier.rs  verify.rs  weights.rs
frame/dex/: Cargo.toml
frame/dex/src/: lib.rs  weights.rs
frame/membership/src/: lib.rs
frame/multi-sig/: Cargo.toml
frame/multi-sig/src/: lib.rs  weights.rs
frame/zk-snarks-base/: Cargo.toml
frame/zk-snarks-base/src/: lib.rs
